--- a/Manga_black_tont/View/StarPage/StartPageCell.xib
+++ b/Manga_black_tont/View/StarPage/StartPageCell.xib
@@ -16,8 +16,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="389" height="765"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="sxk-9E-NfY">
-                        <rect key="frame" x="16" y="602.66666666666663" width="357" height="146.33333333333337"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="sxk-9E-NfY">
+                        <rect key="frame" x="16" y="616.66666666666663" width="357" height="132.33333333333337"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Read your manga" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OvA-Qt-aak">
                                 <rect key="frame" x="97.333333333333329" y="0.0" width="162.66666666666669" height="24.666666666666668"/>
@@ -25,8 +25,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Olo-pO-0G6">
-                                <rect key="frame" x="2.3333333333333428" y="54.66666666666675" width="352.33333333333326" height="91.666666666666686"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Olo-pO-0G6">
+                                <rect key="frame" x="2.3333333333333428" y="40.66666666666675" width="352.33333333333326" height="91.666666666666686"/>
                                 <string key="text">As a books lovers, you can also own your favorite books by ordering it on our app too We ensure that, we have almost all the versions of book such as a writer's sign, a limited edition,....
 </string>
                                 <fontDescription key="fontDescription" name="Charter-Bold" family="Charter" pointSize="15"/>
@@ -36,24 +36,19 @@
                         </subviews>
                     </stackView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vWN-zH-OnM">
-                        <rect key="frame" x="0.0" y="0.0" width="389" height="602.66666666666663"/>
+                        <rect key="frame" x="0.0" y="0.0" width="389" height="616.66666666666663"/>
                     </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="sxk-9E-NfY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="0fc-IA-cCR"/>
-                <constraint firstItem="sxk-9E-NfY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="5Rl-qe-pxg"/>
-                <constraint firstItem="sxk-9E-NfY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="88F-sv-eWT"/>
-                <constraint firstAttribute="trailing" secondItem="sxk-9E-NfY" secondAttribute="trailing" constant="16" id="9t9-A3-OZW"/>
-                <constraint firstAttribute="bottom" secondItem="sxk-9E-NfY" secondAttribute="bottom" constant="16" id="Ias-UU-gq9"/>
-                <constraint firstItem="sxk-9E-NfY" firstAttribute="top" secondItem="vWN-zH-OnM" secondAttribute="bottom" id="Sfs-7f-mst"/>
-                <constraint firstAttribute="trailing" secondItem="vWN-zH-OnM" secondAttribute="trailing" id="aQ4-A0-KpB"/>
-                <constraint firstItem="vWN-zH-OnM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="bFs-AS-EW1"/>
-                <constraint firstAttribute="trailing" secondItem="sxk-9E-NfY" secondAttribute="trailing" constant="16" id="d8a-Wk-aR8"/>
-                <constraint firstItem="sxk-9E-NfY" firstAttribute="top" secondItem="vWN-zH-OnM" secondAttribute="bottom" id="dln-lz-WdR"/>
-                <constraint firstAttribute="bottom" secondItem="sxk-9E-NfY" secondAttribute="bottom" constant="16" id="gjX-0J-S3y"/>
-                <constraint firstItem="vWN-zH-OnM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="pWF-JE-ejw"/>
+                <constraint firstItem="sxk-9E-NfY" firstAttribute="top" secondItem="vWN-zH-OnM" secondAttribute="bottom" id="AgA-MD-caz"/>
+                <constraint firstItem="vWN-zH-OnM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="JLG-N3-dZ6"/>
+                <constraint firstAttribute="trailing" secondItem="sxk-9E-NfY" secondAttribute="trailing" constant="16" id="aCU-f1-v4z"/>
+                <constraint firstAttribute="bottom" secondItem="sxk-9E-NfY" secondAttribute="bottom" constant="16" id="ceD-qS-AON"/>
+                <constraint firstItem="vWN-zH-OnM" firstAttribute="centerX" secondItem="sxk-9E-NfY" secondAttribute="centerX" id="mHZ-UX-Qum"/>
+                <constraint firstItem="sxk-9E-NfY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="qBp-tn-a8r"/>
+                <constraint firstItem="vWN-zH-OnM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="xpZ-WN-1X7"/>
             </constraints>
             <size key="customSize" width="322" height="637"/>
             <connections>
